syntax = "proto2";
package hw.trezor.messages.mina;

// Sugar for easier handling in Java
option java_package = "com.satoshilabs.trezor.lib.protobuf";
option java_outer_classname = "TrezorMessageNem";


/**
  * Request: Ask device for Mina address corresponding to address_n path
  * @start
  * @next MinaAdress
  * @next Failure
  */
message MinaGetAddress {
    repeated uint32 address_n = 1;
    optional uint32 network = 2;
    optional bool show_display = 3;
}

/**
  * Response: Contains Mina address dirived from device private seed
  * @end
  */
message MinaAddress {
    required string address = 1;
}
